--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
-# Compiled class file
+# Java sets
+.gradle
+/build/
+gradle-app.setting
+
+!gradle-wrapper.jar
+
+.gradletasknamecache
+
 *.class
-
-# Log file
 *.log
-
-# BlueJ files
 *.ctxt
 
-# Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
 *.jar
 *.war
 *.nar
@@ -21,3 +23,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.idea
